intef-exe (3:2.6) lucid; urgency=medium

  * Ignacio Gros
    - TinyMCE: New image optimizer.
    - TinyMCE: New mind maps editor plugin (mindmaps, by David Richard).
    - TinyMCE: Paste as text by default. (#541)
    - TinyMCE: GNU Free Documentation License added to the available licenses list.
    - New UDL Content iDevice.
      Junta de Andalucía - Consejería de Educación y Deporte (cofinanced with the European Union FEDER funds).
    - Interactive Video iDevice: You can use a youtu.be URL.
    - The About eXe page shows the application type instead of the revision number.
    - iDevices revision (usability, HTML, presentation, strings).
    - Presentation Style: New Next/Previous top links.
    - Add a Show/Hide title to the time line links to improve accessibility.
    - Contents with effects: Print version revision.
    - Allow H5P embedded content in tabs, carousels and accordions.
    - Fixed: The CSS class that depends on the selected iDevice icon was missing when exporting. (#558)
    - Fixed: Could not see the selected icon in Styles with SVG icons.
    - Fixed: MediaElement Player download file problem. (#555)
    - Fixed: Presentation Style: Prevent link default behaviour (usability problem).
    - Fixed: Invalid XML in the JavaScript iDevices configuration files.
    - Fixed: "New version available" message always displayed in the PPA version. (#540)
    - Fixed: Add/Rename/Move page and add iDevice disabled when editing an iDevice. (#550)
    - Fixed: Dropdown Activity instructions. (#574)
    - Fixed: Note iDevice missing instructions. (#575)
    - Fixed: TinyMCE - Paragraphs disappeared when updating/deleting a FIGURE. (#576)
    - Fixed: TinyMCE - Image title changed when selecting  an image. (#577)
    - Fixed: exe_do exported a different HTML with missing elements. (#536)

  * Manuel Narváez
    - New iDevice category (Games):
      New iDevices: Lock, Challenge, Multiple Choice Quiz.